# Personal_Research

./: .gitignore  README.md
deepagent-auth-based-tool-routing/: .gitignore  README.md  main.py  pyproject.toml  run.ipynb  skills_auth_routing.ipynb
deepagent-auth-based-tool-routing/script/: gen_notebook.py  gen_skills_notebook.py
deepagent-builtin-tools-analysis/: .env.example  .gitignore  README.md  main.py  pyproject.toml  run.ipynb
deepagent-builtin-tools-analysis/dataset/: scenarios.json
deepagent-builtin-tools-analysis/module/: __init__.py  proxy_logger.py
deepagent-builtin-tools-analysis/script/: start_proxy.sh  stop_proxy.sh
hermes-agent-analysis/: .gitignore  ARCHITECTURE.md  README.md  main.py  pyproject.toml
hermes-agent-analysis/module/: README.md
hermes-agent-analysis/module/code_execution_rpc/: CODE_EXECUTION_RPC_ANALYSIS.md  README.md  __init__.py  code_execution_rpc.py  demo.py
hermes-agent-analysis/module/context_compression/: CONTEXT_COMPRESSION_ANALYSIS.md  README.md  __init__.py  context_compression.py  demo.py
hermes-agent-analysis/module/conversation_loop/: FLOW_DIAGRAM.md  LOOP_WALKTHROUGH.md  README.md  __init__.py  conversation_loop.py  demo.py
hermes-agent-analysis/module/cron_scheduling/: README.md  __init__.py  cron_scheduling.py  demo.py
hermes-agent-analysis/module/execution_environments/: README.md  __init__.py  demo.py  execution_environments.py
hermes-agent-analysis/module/gateway_platforms/: README.md  __init__.py  demo.py  gateway_platforms.py
hermes-agent-analysis/module/memory_system/: README.md  __init__.py  (+3 more)
(+26 files in other folders)
