[project]
name = "deepagent-auth-based-tool-routing"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.3",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.3",
    "langchain-community>=0.4.2",
    "langgraph>=1.2.1",
    "matplotlib>=3.10.9",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
